# AssetFlow

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/app/: __init__.py  main.py
api/app/api/: deps.py
api/app/api/routes/: __init__.py  accounts.py  admin.py  assets.py  auth.py  categories.py  deposits.py  imports.py  notifications.py  planning.py  reports.py  scenarios.py  tags.py  transactions.py  transfers.py  users.py
api/app/core/: config.py  security.py
api/app/db/: base.py  session.py
api/app/models/: __init__.py  base.py  core.py  enums.py  imports.py  ledger.py  planning.py  portfolio.py
api/app/schemas/: __init__.py  accounts.py  admin.py  auth.py  common.py  imports.py  notifications.py  planning.py  portfolio.py  reports.py  scenarios.py  transactions.py  users.py
api/app/services/: analytics.py  auth.py  bootstrap.py  imports.py  ledger.py  market_data.py  portfolio.py  scenarios.py
api/app/tasks/: celery_app.py  jobs.py
api/tests/: conftest.py  test_api_smoke.py  test_assetflow.db  test_calculations.py
infra/nginx/: default.conf
scripts/: export_openapi.py  generate_client.sh
web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: main.tsx
web/src/app/: AppShell.tsx  router.tsx
web/src/components/: CreateDrawer.tsx  EntityManageDrawer.tsx  GoalCelebrationOverlay.tsx  GoalContributionDrawer.tsx  ManageDrawer.tsx  ui.tsx
(+13 files in other folders)
